[tool.poetry]
name = "thndr-be-task"
version = "1.0.0"
description = ""
authors = ["Ali <ali@thndr.app>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
SQLAlchemy = "^2.0.32"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
